Updated the documentation website's design, added new components and enabled redirects for i18n support.

--- a/404.md
+++ b/404.md
@@ -3,7 +3,7 @@ title: Page Not Found
 description: HTTP 404 - Not Found
 ---
 
-<div style="text-align: center">
+<div class="centered_item">
 
     <h3>
        404 Not Found
@@ -15,7 +15,7 @@ description: HTTP 404 - Not Found
 
     <br>
 
-    <a href="../" style="font-size: x-large; font-weight: bold;">
+    <a href="../" class="back_button">
         Go Back
     </a>
 
